--- a/app/views/organization/view.scala.html
+++ b/app/views/organization/view.scala.html
@@ -44,7 +44,7 @@
 }
 }
 
-@siteLayout(org.name, utils.MenuType.NONE) {
+@organizationLayout(org.name, utils.MenuType.NONE, org) {
 @header(org)
 @menu(org)
 
