--- a/app/views/search/result.scala.html
+++ b/app/views/search/result.scala.html
@@ -23,224 +23,22 @@
 @import utils.TemplateHelper._
 @import utils.JodaDateUtil
 
-@siteLayout(message, utils.MenuType.NONE) {
-<div class="site-breadcrumb-outer">
-    <div class="site-breadcrumb-inner">
-        <h3>
-            @if(group != null) {> @group.name}
-            @if(project != null) {> @project.owner/@project.name}
-            > "@searchResult.getKeyword()"
-        </h3>
-    </div>
-</div>
-<div class="page-wrap-outer">
-    <div class="project-page-wrap">
-        <h4></h4>
-        <ul>
-            <li>Issues Count: @searchResult.getIssuesCount</li>
-            <li>Users Count: @searchResult.getUsersCount</li>
-            @if(project == null) {
-            <li>Projects Count: @searchResult.getProjectsCount</li>
-            }
-            <li>Posts Count: @searchResult.getPostsCount</li>
-            <li>Milestones Count: @searchResult.getMilestonesCount</li>
-            <li>IssueComments Count: @searchResult.getIssueCommentsCount</li>
-            <li>PostComments Count: @searchResult.getPostCommentsCount</li>
-            <li>Reviews Count: @searchResult.getReviewsCount</li>
-        </ul>
 
-        @defining(searchResult.getIssues) { page =>
-            @if(page != null) {
-            <h4>Issues</h4>
-            <ul>
-                @for(issue <- page.getList) {
-                <li>#@issue.getNumber @issue.title
-                    @defining(searchResult.makeSnipets(issue.body, 40)) { snipets =>
-                        @if(snipets != null && snipets.size > 0) {
-                            <ul>
-                                @for(snipet <- snipets) {
-                                    <li>@snipet</li>
-                                }
-                            </ul>
-                        }
-                    }
-                </li>
-                }
-            </ul>
-            <!-- pagination.js will fill here. -->
-            <div id="pagination"></div>
-
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    yobi.Pagination.update($("#pagination"), @page.getTotalPageCount);
-                });
-            </script>
-            }
+@if(project !=null) {
+    @projectLayout(message, project, utils.MenuType.NONE) {
+        @projectMenu(project, utils.MenuType.NONE, "main-menu-only")
+        @partial_search(group, project, searchResult)
+    }
+} else {
+    @if( group != null) {
+        @organizationLayout(message, utils.MenuType.NONE, group) {
+            @organization.header(group)
+            @organization.menu(group)
+            @partial_search(group, project, searchResult)
         }
-
-        @defining(searchResult.getUsers) { page =>
-            @if(page != null) {
-            <h4>Users</h4>
-            <ul>
-                @for(user <- page.getList) {
-                <li>@user.loginId @user.name</li>
-                }
-            </ul>
-            <!-- pagination.js will fill here. -->
-            <div id="pagination"></div>
-
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    yobi.Pagination.update($("#pagination"), @page.getTotalPageCount);
-                });
-            </script>
-            }
+    } else {
+        @siteLayout(message, utils.MenuType.NONE) {
+            @partial_search(null, null, searchResult)
         }
-
-        @defining(searchResult.getProjects) { page =>
-            @if(page != null) {
-            <h4>Projects</h4>
-            <ul>
-                @for(project <- page.getList) {
-                <li>@project.owner/@project.name
-                    @defining(searchResult.makeSnipets(project.overview, 40)) { snipets =>
-                        @if(snipets != null && snipets.size > 0) {
-                            <ul>
-                                @for(snipet <- snipets) {
-                                    <li>@snipet</li>
-                                }
-                            </ul>
-                        }
-                    }
-                </li>
-                }
-            </ul>
-            <!-- pagination.js will fill here. -->
-            <div id="pagination"></div>
-
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    yobi.Pagination.update($("#pagination"), @page.getTotalPageCount);
-                });
-            </script>
-            }
-        }
-
-        @defining(searchResult.getPosts) { page =>
-            @if(page != null) {
-            <h4>Issues</h4>
-            <ul>
-                @for(post <- page.getList) {
-                <li>@post.title
-                    @defining(searchResult.makeSnipets(post.body, 40)) { snipets =>
-                        @if(snipets != null && snipets.size > 0) {
-                            <ul>
-                                @for(snipet <- snipets) {
-                                    <li>@snipet</li>
-                                }
-                            </ul>
-                        }
-                    }
-                </li>
-                }
-            </ul>
-            <!-- pagination.js will fill here. -->
-            <div id="pagination"></div>
-
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    yobi.Pagination.update($("#pagination"), @page.getTotalPageCount);
-                });
-            </script>
-            }
-        }
-
-        @defining(searchResult.getIssueComments) { page =>
-            @if(page != null) {
-            <h4>Issue Comments</h4>
-            <ul>
-                @for(comment <- page.getList) {
-                <li>@comment.authorName
-                    @defining(searchResult.makeSnipets(comment.contents, 40)) { snipets =>
-                        @if(snipets != null && snipets.size > 0) {
-                            <ul>
-                                @for(snipet <- snipets) {
-                                    <li>@snipet</li>
-                                }
-                            </ul>
-                        }
-                    }
-                </li>
-                }
-            </ul>
-            <!-- pagination.js will fill here. -->
-            <div id="pagination"></div>
-
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    yobi.Pagination.update($("#pagination"), @page.getTotalPageCount);
-                });
-            </script>
-            }
-        }
-
-        @defining(searchResult.getPostComments) { page =>
-            @if(page != null) {
-            <h4>Post Comments</h4>
-            <ul>
-                @for(comment <- page.getList) {
-                <li>@comment.authorName
-                    @defining(searchResult.makeSnipets(comment.contents, 40)) { snipets =>
-                        @if(snipets != null && snipets.size > 0) {
-                            <ul>
-                                @for(snipet <- snipets) {
-                                    <li>@snipet</li>
-                                }
-                            </ul>
-                        }
-                    }
-                </li>
-                }
-            </ul>
-            <!-- pagination.js will fill here. -->
-            <div id="pagination"></div>
-
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    yobi.Pagination.update($("#pagination"), @page.getTotalPageCount);
-                });
-            </script>
-            }
-        }
-
-        @defining(searchResult.getReviews) { page =>
-            @if(page != null) {
-            <h4>Reviews</h4>
-            <ul>
-                @for(review <- page.getList) {
-                <li>@review.author.name
-                    @defining(searchResult.makeSnipets(review.getContents, 40)) { snipets =>
-                        @if(snipets != null && snipets.size > 0) {
-                            <ul>
-                                @for(snipet <- snipets) {
-                                    <li>@snipet</li>
-                                }
-                            </ul>
-                        }
-                    }
-                </li>
-                }
-            </ul>
-            <!-- pagination.js will fill here. -->
-            <div id="pagination"></div>
-
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    yobi.Pagination.update($("#pagination"), @page.getTotalPageCount);
-                });
-            </script>
-            }
-        }
-    </div>
-</div>
+    }
 }
