--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -18,7 +18,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  **@
-@(menuType:utils.MenuType, isProject:Boolean)
+@(menuType:utils.MenuType, project:Project, org:Organization)
 
 @import utils._
 
@@ -30,6 +30,16 @@
     play.Configuration.root().getString("application.feedback.url")
 }
 
+@makeSearchLink() = @{
+    if(project != null) {
+        routes.SearchApp.searchProject(project.owner, project.name)
+    } else if (org !=null) {
+        routes.SearchApp.searchGroupRepos(org.name)
+    } else {
+        routes.SearchApp.searchAllRepos()
+    }
+}
+
 <div class="unsupported">
     <div class="unsupported-inner">
         <p id="unsupported-content">
@@ -38,7 +48,7 @@
         </p>
     </div>
 </div>
-<header class="gnb-outer @if(isProject) {project-header}">
+<header class="gnb-outer @if(project !=null) {project-header}">
     <div class="gnb-inner">
         <a href="@routes.Application.index()" class="logo"><h1 class="blind">@utils.Config.getSiteName</h1></a>
         <ul class="gnb-nav">
@@ -53,6 +63,55 @@
                 <a href="@appFeedbackUrl" target="_blank">@Messages("title.yobi.feedback")</a>
             </li>
             }
+            <li>
+                <form action="@makeSearchLink()" class="input-prepend gnb-search-form" name="gnb-search-form">
+                <input type="hidden" name="searchType" value="issue">
+                    @if(project != null || org !=null) {
+                    
+                    <div class="btn-group">
+                        <button class="ybtn dropdown-toggle" data-toggle="dropdown" type="button" id="gnb-search-scope-title">
+                            @if(project != null) {
+                                @Messages("search.scope.porject")
+                            } else {
+                                @Messages("search.scope.group")
+                            }
+                        </button>
+                        <ul class="dropdown-menu flat right">
+                            @if(project != null) {
+                            <li>
+                                <a href="#" data-toggle="search-scope" data-action="@routes.SearchApp.searchProject(project.owner, project.name)">
+                                    @Messages("search.scope.porject")
+                                </a>
+                            </li>
+                            @if(project.hasGroup) {
+                            <li>
+                                <a href="#" data-toggle="search-scope" data-action="@routes.SearchApp.searchGroupRepos(project.owner)">
+                                    @Messages("search.scope.group")
+                                </a>
+                            </li>
+                            }
+                            } 
+                            @if(org != null) {
+                            <li>
+                                <a href="#" data-toggle="search-scope" data-action="@routes.SearchApp.searchGroupRepos(org.name)">
+                                    @Messages("search.scope.group")
+                                </a>
+                            </li>
+                            }
+                            <li>
+                                <a href="#" data-toggle="search-scope" data-action="@routes.SearchApp.searchAllRepos()">
+                                    @Messages("search.scope.all")
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    }
+                    <div class="search-box @if(project != null || org !=null) {select}">
+                        <input type="text" name="keyword" autocomplete="off" accesskey="S">
+                        <button type="submit"><i class="yobicon-search"></i></button>
+                    </div>
+                </form>
+            </li>
         </ul>
         @common.usermenu(null)
     </div>
