--- a/app/views/site/siteMngLayout.scala.html
+++ b/app/views/site/siteMngLayout.scala.html
@@ -59,6 +59,10 @@
                     <li class="@isActiveMenu(routes.SiteApp.massMail())">
                         <a href="@routes.SiteApp.massMail()">@Messages("site.sidebar.massMail")</a>
                     </li>
+                    <li class="@isActiveMenu(routes.SiteApp.update())">
+                        <a href="@routes.SiteApp.update()">@Messages("site.sidebar.update")
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="span10">
