UserInfo: separate each form tabs into independent page
Userinfo editform tabs like as Profile, Change Password, E-mails
and Notification settings within a same page are separated to independent page.
A link to "Notification settings" page will be appended to notification email.

--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -290,14 +290,14 @@ button.nbtn {
 .fake-file-wrap {
     position: relative; display:block; clear:both;
     overflow: hidden; cursor:pointer;
-    width:70px; /*margin-top:10px;*/
     &:hover {
         background:darken(@white, 10%);
     }
 
     .file {
         position: absolute; z-index:2; cursor:pointer;
-        top:0; left: 5px; /*-15px;*/ width:100px;
+        top:0; left: 5px; /*-15px;*/
+        min-width:100px; width:100%;
         .opacity(0);
     }
 }
